CORE-1003 fixed overlap of multi-recipient icon in message list.

--- a/plugins/core/web-app/css/messages.css
+++ b/plugins/core/web-app/css/messages.css
@@ -82,6 +82,7 @@
 }
 .main-list .message-text-cell {
 	width: auto;
+	padding-right: 21px;
 }
 .main-list .message-date-cell {
 	padding-right: 21px;
